# SPECTROview

./: .gitignore  404.html  CLAUDE.md  MANIFEST.in  README.md  RELEASES.md  Releases.md  SPECTROview.py  TOAST_USAGE_EXAMPLE.md  _diag.py  callbacks_df.py  callbacks_plot.py  callbacks_spectre.py  callbacks_spectre_Copy.py  clean_build.sh  cleanup_utils.py  common.py  common2.py  create_arrows.py  create_arrows_light.py  data_to_fix_bug_low_fitting.spectra  dataframe.py  diff.txt  docs_hooks.py  fix_arrows.py  fix_doc.py  fix_filter.py  fix_fstrings.py  fix_fstrings2.py  fix_margins.py  fix_mva_toolbar.py  fix_panel_style.py  fix_scrollarea.py  fix_splitter_pressed.py  fix_splitter_spinbox.py  format_h3.py  format_h4.py  git_rebase_editor.sh  git_seq_editor.sh  gui.py  (+54 more)
.claude/: settings.json
.claude/rules/: architecture.md  coding-standards.md  documentation.md  fit-engine.md  graphs-workspace.md  pitfalls.md  spectra-maps-workspace.md  testing.md  workflows.md
.github/: copilot-instructions.md
.github/workflows/: pytest.yml
api/: index.html
api/2dmap/: index.html
api/calculators/: index.html
api/extending/: index.html
api/graphs/: index.html
api/spectra/: index.html
app/: RELEASE.MD  __init__.py  app_settings.py  app_shortcuts.py  common.py  gui.py  main.py  maps copy 2.py  maps copy.py  maps.py  spectrums copy.py  spectrums.py  uiconnector.py  visualisation.py
app/doc/: about.md  user_manual.md
app/main_tabs/: maps.py  spectrums.py
app/resources/: about.md  plotpolicy.mplstyle
app/ui/: gui copy.ui  gui.py  gui.ui  resources.py  resources.qrc
changelog/: index.html
data_test/: 2.maps  240222_ Power-effect_285nm samples.xlsx  2Dmaps_LS6.xlsx  2dmap.graphs  3.spectra  Graphing.svgraphs  ICAR 2328032.xlsx  ICAR2340015.xlsx  ICAR2341007.xlsx  Map_data_all_samplesE-F.xlsx  NEW_MAPs.maps  NEW_MAPs_22.maps  SAVED_GRAPHS.graphs  Wafer200_MoS2.xlsx  Wafer300_sSOI.xlsx  azeaze.spectra  data.xlsx  df1.xlsx  df4.xlsx  dict_structure.py  graph2.graphs  graph3.graphs  new model.json  save1.json  save2.graphs  save2.json  save_graph.json  save_spectrums.svspectra  saved.graphs  saved.spectra  saved2.spectra  saved_GRAPH_2Dmap.graphs  saved_test_collect_results.spectra  workspace.json  workspace2.json  workspace_show.json
data_test/CSV/: DF2.csv  MANUAL_D23S2204.2_07_Recipe-MoS2-532-5pct-49points-10x-margin10mm-30sx2-sans-calib;20240110.171958.csv  W05.csv  W07.csv
data_test/RAW 2Dmaps/: D23S2204.2_03.csv  D23S2204.2_05.csv  D23S2204.2_11.csv  D23S2204.2_17.csv  FITMODEL_MoS2_325-490.json  MoS2_325-490_.json  MoS2_325-600_.json  MoS2_5component_Nolabel.json  MoS2_simple_noLABEL.json  SIMPLE_MODEL.json
data_test/RAW spectrum/: D23S2204.2_01.csv  D23S2204.2_02.csv  D23S2204.2_05.csv  D23S2204.2_07.csv  D23S2204.2_15.csv  D23S2204.2_19.csv  MoS2_300-590_Si-sub_.json  MoS2_300-590_Si-sub_shifted-8cm.json  MoS2_325-490_.json  MoS2_325-490_8cm-shifted _200itra.json  MoS2_325-490_8cm-shifted.json  MoS2_325-600_.json  MoS2_325-600_8cm-shited.json  MoS2_5peaks_Test.json  SIMPLE_MODEL.json
data_test/RAW_spectra/: 12ML-285nm_532nm_high_p01_100x_10sx3.txt  12ML-285nm_532nm_high_p01_100x_10sx3_3.txt  12ML-285nm_532nm_high_p01_100x_5sx3_2.txt  12ML-285nm_532nm_high_p05_100x_5sx3.txt  12ML-285nm_532nm_high_p05_100x_5sx3_2.txt  12ML-285nm_532nm_high_p05_100x_5sx3_3.txt  12ML-285nm_532nm_high_p10_100x_2sx2.txt  MoS2_325-490_.json  (+39 more)
developer/: index.html
doc/: computed_columns_feature.md  dev_Tensor_Fit_Engine.md  dev_intructions.md  graphs_workspace_architecture.md  graphs_workspace_architecture.md.resolved  implementation_plan.md.resolved  new_fit_engine.md  task.md.resolved  test_prompt.md  user_manual.md
docs/: changelog.md  docs_hooks.py  index.md  log.md  user_manual  user_manual_images
examples/: MAPS22222.maps  TEST.graphs  TEST2.graphs  api_workflow_map.py  api_workflow_spectra.py  baseline_features.spectra  baseline_features_2.spectra  data_inline.xlsx  ex_loading_saved_files.py  ex_reading_all_supported_data.py  fig1.graphs  fit_model2.json  fit_model3.json  fit_model6_test fit converging.json  fit_results.xlsx  graphs.graphs  graphs2.graphs  graphs2222222222222.graphs  graphs_2.graphs  graphs_3333333333.graphs  graphs_NEW.graphs  graphs_NEW3.graphs  graphs_NEW4.graphs  graphs_NEW_legend outside.graphs  graphs__2.graphs  graphs__3.graphs  graphs_test_save_ copy.graphs  graphs_test_save_.graphs  map_3_no-metadata.maps  profil.wdf  profil_spectra.txt  save_df_to_csv.csv  save_df_to_csv.xlsx  saved.maps  saved.spectra  saved_df.xlsx  spectra.spectra  spectra_NEW.spectra  spectra_NEW222.spectra  spectra_records.spectra  (+11 more)
home/: index.html
log/: index.html
overrides/: main.html
resources/: about.md  manual.md  pandas_df_query.md  plotpolicy.mplstyle  plotpolicy_spectre.mplstyle  user_manual.md
scratch/: test_clear.py  test_qb.py  test_style.py
search/: search_index.json
spectroview/: README.md  SPECTROview.py  __init__.py  app_shortcuts.py  common.py  main.py  maps.py  requirements.txt  spectrums.py  uiconnector.py  visualisation.py
spectroview - lastest version/: __init__.py
spectroview_0.9.6/: main.py
stylesheets/: extra.css
tests/: GRAPHS_WORKSPACE_TESTING.md  README.md  conftest.py  test1_all_workflows.py  test4_m_spectra.py  test6_m_graph.py  test7_vm_workspace_spectra.py  test8_vm_workspace_graphs.py  test9_decay_fitting.py  test_1.py  test_1_reading_all_supported_data.py  test_2.py  test_2_loading_saved_files.py  test_ai_agent_filter_validation.py  test_ai_agent_schema.py  test_ai_agent_small_model_detection.py  test_batch_engine.py  test_fitting_performance.py  test_integration_fitting.py  test_integration_workflows.py  test_m_graph.py  test_m_io.py  test_m_spectra.py  test_m_spectrum.py  test_persistence_v3.py  test_signal_flow.py  test_tensor_engine_weights.py  test_update_banner_preview.py  test_vm_workspace_graphs.py  test_vm_workspace_spectra.py
ui/: gui - Copie.ui  gui-copy.ui  gui.ui  resources.py  resources.qrc  resources_new.py  resources_new.qrc
user-guide/: index.html
user-manual/: index.html
user_manual/: index.html
(+563 files in other folders)
