[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroview"
version = "0.5.1"
description = "A Tool for Spectroscopic Data Processing and Visualization."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SPECTROview", "fit", "fitting", "spectra", "spectrum", "spectroscopic", "visualization",
    "Raman", "Photoluminescence", "wafer-data", "2D-maps", "data analysis"]
license = {file = "LICENSE"}
authors = [
    {name = "Van Hoan Le", email = "van-hoan.le@cea.fr"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
]

dependencies = [
    "fitspy==2024.5",
    "numpy",
    "openpyxl",
    "pandas",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "pyside6",
    "markdown",
    "scipy",
    "lmfit",
    "pywin32; platform_system == 'Windows'",
    "superqt"
]

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/SPECTROview"

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.scripts]
spectroview = "app.main:launcher"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

[tool.setuptools.package-data]
app = [
    "doc/*.md",
    "doc/figures/*.png",
    "resources/*.mplstyle", 
    "resources/*.png", 
    "resources/*.md",
    "ui/*.ui",
    "ui/*.qrc",
    "ui/iconpack/*.png",
    "ui/iconpack/*.ico",
    
]