[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroview"
dynamic = ["version"]
description = "SPECTROView: A Tool for Spectroscopic Data Processing and Visualization."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SPECTROview", "fit", "fitting", "spectra", "spectrum", "spectroscopic", "visualization",
    "Raman", "Photoluminescence", "wafer-data", "2D-maps", "data analysis"]
license = {file = "LICENSE"}
authors = [
    {name = "Van Hoan Le", email = "van-hoan.le@cea.fr"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
]

dependencies = [
    "fitspy==2025.6",
    "numpy",
    "openpyxl",
    "pandas",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "pyside6",
    "markdown",
    "scipy",
    "lmfit",
    "pywin32; platform_system == 'Windows'",
    "superqt"
]

[tool.setuptools.package-data]
spectroview = [
    "resources/*.mplstyle", 
    "resources/*.png", 
    "resources/icons/*.png",
    "resources/icons/*.ico",

    "config/gui/*.ui",
    "config/gui/*.qrc",
    "resources/*.pdf"
]

[project.scripts]
spectroview = "spectroview.main:launcher"

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/SPECTROview"

[project.optional-dependencies]
dev = ["pytest", "black"]


[tool.setuptools.dynamic]
version = { attr = "spectroview.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["spectroview*"]
namespaces = false


