[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroview"
dynamic = ["version"]
description = "SPECTROView: A Tool for Spectroscopic Data Processing and Visualization"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "SPECTROview", "fit", "fitting", "spectra", "spectrum", "spectroscopic", 
    "visualization", "Raman", "Photoluminescence", "wafer-data", "2D-maps", 
    "data-analysis", "MVVM", "PySide6", "Qt", "hyperspectral-imaging"
]
license = {file = "LICENSE"}
authors = [
    {name = "Van Hoan Le", email = "van-hoan.le@cea.fr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "numpy < 2.0.0",
    "openpyxl >=3.1.5",
    "pandas",
    "pyarrow >= 15.0.0",
    "matplotlib >=3.6.2, <3.10.9",
    "pyside6",
    "scipy",
    "pywin32; platform_system == 'Windows'",
    "superqt",
    "renishawwire",
    "markdown",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0"
]

[tool.setuptools.package-data]
spectroview = [
    "resources/*.mplstyle", 
    "resources/*.png", 
    "resources/icons/*.png",
    "resources/icons/*.ico",
    "resources/icons/*.svg",
    "resources/*.pdf",
    "resources/user_manual/*",
    "resources/user_manual_images/*/*"
]

[project.scripts]
spectroview = "spectroview.main:launcher"

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/SPECTROview"

[project.optional-dependencies]
dev = ["pytest", "pytest-qt", "black", "flake8"]
test = ["pytest", "pytest-qt"]


[tool.setuptools.dynamic]
version = { attr = "spectroview.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["spectroview*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
